<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/skyBlue"
    tools:context=".AboutMe">


    <TextView
        android:id="@+id/visited"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/aboutme"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:fontFamily="@font/varela_round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/recentAirline"
        android:layout_width="377dp"
        android:layout_height="94dp"
        android:text="@string/recentAirline"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:fontFamily="@font/varela_round"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.43" />

    <Button
        android:id="@+id/back_btn"
        android:layout_width="131dp"
        android:layout_height="52dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/Back"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:fontFamily="@font/varela_round"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/locations_btn"
        android:layout_width="325dp"
        android:layout_height="77dp"
        android:layout_marginBottom="88dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/locationsIHaveVisited"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:fontFamily="@font/varela_round"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recentAirline"
        app:layout_constraintVertical_bias="0.292" />

    <Button
        android:id="@+id/interest_btn"
        android:layout_width="339dp"
        android:layout_height="100dp"
        android:layout_marginBottom="88dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/recentPointOfInterest"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:fontFamily="@font/varela_round"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recentAirline"
        app:layout_constraintVertical_bias="0.893" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="156dp"
        android:layout_height="162dp"
        android:layout_marginBottom="164dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/visited"
        app:srcCompat="@drawable/user" />

</androidx.constraintlayout.widget.ConstraintLayout>