<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/skyBlue"
    tools:context=".PointsOfInterest">

    <TextView
        android:id="@+id/pointsofinterest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="624dp"
        android:text="@string/pointsofinterest"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:fontFamily="@font/varela_round"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.415" />

    <ImageView
        android:id="@+id/church"
        android:layout_width="73dp"
        android:layout_height="65dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/barcelonachruch" />

    <ImageView
        android:id="@+id/bigben"
        android:layout_width="73dp"
        android:layout_height="65dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pisa"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bigben" />

    <ImageView
        android:id="@+id/eiffeltower"
        android:layout_width="73dp"
        android:layout_height="65dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/pisa"
        app:layout_constraintStart_toEndOf="@+id/church"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/eiffeltower" />

    <ImageView
        android:id="@+id/pisa"
        android:layout_width="73dp"
        android:layout_height="65dp"
        android:layout_marginTop="332dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.642"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035"
        app:srcCompat="@drawable/pisatower" />

    <Button
        android:id="@+id/back_btn"
        android:layout_width="131dp"
        android:layout_height="52dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/Back"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:fontFamily="@font/varela_round"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pointsofinterest"
        app:layout_constraintVertical_bias="0.945" />

    <Button
        android:id="@+id/whatsapp"
        android:layout_width="131dp"
        android:layout_height="52dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/Whatsapp"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:fontFamily="@font/varela_round"
        app:layout_constraintBottom_toTopOf="@+id/back_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/camera_btn"
        app:layout_constraintVertical_bias="0.525" />

    <ImageView
        android:id="@+id/pointsofinterest_img"
        android:layout_width="198dp"
        android:layout_height="194dp"
        android:layout_marginBottom="420dp"
        app:layout_constraintBottom_toBottomOf="@+id/back_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/pointofinterest" />

    <Button
        android:id="@+id/camera_btn"
        android:layout_width="131dp"
        android:layout_height="52dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:text="@string/camera"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:fontFamily="@font/varela_round"
        app:layout_constraintBottom_toTopOf="@+id/back_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pointsofinterest_img"
        app:layout_constraintVertical_bias="0.528" />

</androidx.constraintlayout.widget.ConstraintLayout>